Changelog for zest.releaser
===========================

3.13 (unreleased)
-----------------

- Nothing changed yet.


3.12 (2010-07-22)
-----------------

- Added extra entry point for the release step: ``after_checkout``.
  When this is run, the middle entry point has been handled, the tag
  has been made, a checkout of that tag has been made and we are now
  in that checkout directory.  Idea: Jan-Wijbrand Kolman.
  [maurits]

- Fix: in the zest.releaser.releaser.after entry point data, pass the
  'tagdir' value (if a checkout has been made).  Patch by Wolfgang
  Schnerring, thanks!
  [maurits]

- Fixed tests to also pass with slightly newer git.
  [maurits]


3.11 (2010-06-25)
-----------------

- Small tweak: allowing zc.rst2's "rst2 html" in addition to docutils' own
  "rst2html".


3.10 (2010-06-15)
-----------------

- Fix : when running 'release' with python2.6 against a private egg server,
  the distutils 'register' command would run against PyPI
  while 'upload' command would run against private server.
  (-r option needs to be stated twice)
  [gotcha]

3.9 (2010-06-11)
----------------

- Again at the end of a fullrelease report the location of the
  directory containing the checkout of the tag, if it has been made.
  [maurits]


3.8 (2010-05-28)
----------------

- Also allowing ``CHANGES`` in addition to ``HISTORY.txt`` and ``CHANGES.txt``
  as a history filename.  Keeps several Django packages happy.


3.7 (2010-05-07)
----------------

- Added support for bzr.  Fixes
  https://bugs.launchpad.net/zest.releaser/+bug/490816  [menesis]


3.6 (2010-04-13)
----------------

- A ``version='1.0',`` string inside the ``setup()`` call no longer has
  non-pep8 spaces around the ``=``.  Fixes
  https://bugs.launchpad.net/zest.releaser/+bug/562122  [reinout]

- Got rid of ugly setup.py hack with UltraMagicString that was meant
  to avoid encoding errors when registering this package at pypi but